--- a/pizzas/templates/pizzas/base.html
+++ b/pizzas/templates/pizzas/base.html
@@ -1,5 +1,5 @@
 <p>
-    <a href="{% url 'pizzas:index' %}">Pizzas</a>
+    <a href="{% url 'pizzas:index' %}">Pizza</a>
 </p>
 
 {% block content %}{% endblock content %}
