--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -1,6 +1,6 @@
 {% extends "pizzas/base.html" %}
 {% block content %}
 <p>
-    Pizzas display pizzas and its toppings.
+    Pizzas display pizza and its toppings.
 </p>
 {% endblock content %}
