--- a/pizzas/templates/pizzas/base.html
+++ b/pizzas/templates/pizzas/base.html
@@ -1,5 +1,7 @@
 <p>
-    <a href="{% url 'pizzas:index' %}">Pizza</a>
+    <a href="{% url 'pizzas:index' %}">Home</a>
+    <a href="{% url 'pizzas:pizzas' %}">Pizzas</a>
 </p>
 
-{% block content %}{% endblock content %}
+{% block content %}
+{% endblock content %}
