--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -5,7 +5,7 @@
 
     {% for pizza in pizzas %}
     <li>
-        <img src={{pizza.image.url}} />
+        <h2><img src="{{pizza.image.url}}" class="img-thumbnail" style="max-height:150px;" alt=""></h2>
         <a href="{% url 'pizzas:pizza' pizza.id%}">{{pizza}}</a>
     </li>
     {% empty %}
