--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -6,9 +6,11 @@
     {% for pizza in pizzas %}
     <li>
         <a href="{% url 'pizzas:pizza' pizza.id%}">{{pizza}}</a>
+        <a href="{% url 'pizzas:comment' pizza.id %}">Add a Comment</a>
     </li>
     {% empty %}
     <li>No pizza has been added yet.</li>
     {% endfor %}
 </ul>
+<!-- <a href="{% url 'pizzas:comment'}">Add a Comment</a> -->
 {% endblock content %}
