--- a/pizzas/templates/pizzas/pizzas.html
+++ b/pizzas/templates/pizzas/pizzas.html
@@ -1,6 +1,6 @@
 {% extends "pizzas/base.html" %}
 {% block content %}
-<p style="color:red;font-size:20px;">Pizzas</p>
+<p style="color:rgb(2, 63, 58);font-size:20px;">Pizzas</p>
 <ul>
 
     {% for pizza in pizzas %}
