--- a/pizzas/templates/pizzas/index.html
+++ b/pizzas/templates/pizzas/index.html
@@ -1,8 +1,10 @@
 {% extends "pizzas/base.html" %}
+{% load bootstrap4 %}
 {% block content %}
-<p>
-<h1 style="color:rgb(33, 33, 36);">Fire and Ice Pizza Menu</h1>
-<h3 style="color:rgb(77, 77, 153);">Do good. Be nice. Order pizza. Repeat.</h3>
-<h2><img src="{{pizza.homeimage.url}}" class="img-thumbnail" style="max-height:300px;" alt=""></h2>
-</p>
+<div style="background-color:rgb(12, 12, 12)">
+    <h1 style=" color:rgb(247, 252, 253);font-size:34px; text-align:center">Fire and Ice Pizza Menu</h1>
+    <h3 style="color:rgb(77, 77, 153);font-size:20px; text-align:center">Do good. Be nice. Order pizza. Repeat.</h3>
+    <h2 style="text-align:center"><img src="/homeimages/a.jpg" class="img-thumbnail"
+            style="max-height:800px;max-width:800px;" alt=""></h2>
+</div>
 {% endblock content %}
